--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </div>
                 </div>
 
-                <form name="search" role="search" action="https://" method="get">
+                <form name="search" role="search" action="https://" method="get" class="animate__animated">
                     <input type="text" placeholder="Type words and hit enter">
                     <button type="submit">
                         <?xml version="1.0" encoding="UTF-8"?>
