--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
             </div>
 
             <div class="shopping-bag">
+
+                <div class="logo-close">
+                    <div class="close">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="27" height="27" viewBox="0,0,256,256"
+                        style="fill:#000000;">
+                        <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M4.99023,3.99023c-0.40692,0.00011 -0.77321,0.24676 -0.92633,0.62377c-0.15312,0.37701 -0.06255,0.80921 0.22907,1.09303l6.29297,6.29297l-6.29297,6.29297c-0.26124,0.25082 -0.36647,0.62327 -0.27511,0.97371c0.09136,0.35044 0.36503,0.62411 0.71547,0.71547c0.35044,0.09136 0.72289,-0.01388 0.97371,-0.27511l6.29297,-6.29297l6.29297,6.29297c0.25082,0.26124 0.62327,0.36648 0.97371,0.27512c0.35044,-0.09136 0.62411,-0.36503 0.71547,-0.71547c0.09136,-0.35044 -0.01388,-0.72289 -0.27512,-0.97371l-6.29297,-6.29297l6.29297,-6.29297c0.29576,-0.28749 0.38469,-0.72707 0.22393,-1.10691c-0.16075,-0.37985 -0.53821,-0.62204 -0.9505,-0.60988c-0.2598,0.00774 -0.50638,0.11632 -0.6875,0.30273l-6.29297,6.29297l-6.29297,-6.29297c-0.18827,-0.19353 -0.4468,-0.30272 -0.7168,-0.30273z"></path></g></g>
+                        </svg>
+                    </div>
+                </div>
                 <?xml version="1.0" encoding="UTF-8"?>
                 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="512" height="512">
                     <path d="M11.5,12h1v8h-1V12Zm5.5,8h1V12h-1v8Zm-11,0h1V12h-1v8ZM23.976,8l-1.844,13.831c-.166,1.236-1.231,2.169-2.479,2.169H4.338c-1.249,0-2.313-.933-2.479-2.17L.016,8H3.059C3.558,3.507,7.375,0,12,0s8.442,3.507,8.941,8h3.035Zm-19.906,0h15.861c-.495-3.94-3.859-7-7.931-7s-7.436,3.06-7.931,7Zm18.764,1H1.158l1.693,12.698c.098,.742,.737,1.302,1.486,1.302h15.314c.749,0,1.389-.56,1.488-1.302l1.692-12.698Z" stroke-width="2px !important"/>
@@ -300,6 +309,7 @@
 
             <!-- white space -->
             
+            <div class="search-bar-white-space"></div>
             <div class="white-space"></div>
 
         </nav>
